# rustboard

./: .gitignore  Cargo.toml  README.md  package.json  wasm-pack.toml
.cargo/: config.toml
.github/workflows/: ci.yml
editor/: Cargo.toml
editor/src/: document.rs  elements.rs  geometry.rs  lib.rs
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  global.d.ts
frontend/src/lib/: wasm-types.ts  wasm.ts
frontend/src/lib/components/: Canvas.svelte  CollaborationPanel.svelte  ColorPicker.svelte  ExportControls.svelte  ShortcutsPanel.svelte  Sidebar.svelte  StylePanel.svelte  StylePanel.svelte.backup  Toolbar.svelte  UndoRedoControls.svelte  ZoomControls.svelte
frontend/src/lib/stores/: collaboration.ts  dash-pattern.ts  edge-style.ts  editor.ts  grid.ts  stroke-color.ts  stroke-width.ts  theme.ts  tools.ts
frontend/src/lib/utils/: boards.ts  center-viewport.ts  clipboard.ts  collaboration.ts  delete-shapes.ts  editor-sync.ts  export.ts  geometry.ts  paste-shapes.ts  rendering.ts  selection-history.ts  selection.ts  storage.ts  undo-redo.ts  viewport-scroll.ts  viewport.ts  zoom.ts
frontend/src/lib/utils/canvas-operations/: arrow.ts  diamond.ts  ellipse.ts  image.ts  index.ts  line.ts  path.ts  rectangle.ts  rectangles.ts  text.ts  texts.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/wasm/: Cargo.toml
frontend/wasm/src/: lib.rs
server/: Cargo.toml  README.md
server/server_data/: sessions.json
server/src/: main.rs  session.rs  websocket.rs
